fix: fixed path to config/spotbugs/exclude.xml
Path was wrong for individual module pom.xml